--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,36 @@
 annotated-types==0.5.0
 anyio==3.7.1
+beanie==1.22.5
 black==23.9.1
+cffi==1.15.1
 click==8.1.7
+cryptography==41.0.3
 dnspython==2.4.2
+ecdsa==0.18.0
 exceptiongroup==1.1.3
 fastapi==0.103.1
 h11==0.14.0
 idna==3.4
+lazy-model==0.2.0
 loguru==0.7.2
 motor==3.3.1
 mypy-extensions==1.0.0
 packaging==23.1
+passlib==1.7.4
 pathspec==0.11.2
 platformdirs==3.10.0
+pyasn1==0.5.0
+pycparser==2.21
 pydantic==2.3.0
 pydantic_core==2.6.3
 pymongo==4.5.0
+python-jose==3.3.0
+python-multipart==0.0.6
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
+toml==0.10.2
 tomli==2.0.1
 typing_extensions==4.7.1
 uvicorn==0.23.2
